--- a/Proyecto_2/Proyecto2.html
+++ b/Proyecto_2/Proyecto2.html
@@ -6,62 +6,8 @@
     <title>Juego de cartas</title>
     <meta name="description" content="Juego de cartas" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
-    <style>
-      body {
-        background-color: rgba(28, 119, 28, 0.5);
-      }
-      #CardZone {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: flex-start;
-      }
-      #Results {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: flex-start;
-      }
-      .CardHand {
-        background-color: honeydew;
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border-radius: 10%;
-      }
-      .Card2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-      }
-      .Card {
-        display: block;
-        padding: 0.5rem;
-      }
-      div div {
-        border: 0px solid rgb(12, 11, 11);
-      }
-      #CardTable {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-      }
-      .CardShowdown {
-        padding: 1rem;
-      }
-      #top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-      }
-      #legend {
-        text-align: center;
-        border: 0.5px solid black;
-      }
-    </style>
+    <link rel="stylesheet" href="Style.css" />
+    <style></style>
   </head>
   <body>
     <div id="top">
@@ -117,404 +63,6 @@
       <p style="text-align: center;">RESULTS</p>
       <div id="Results"></div>
     </main>
-    <script>
-      let form = document.forms[0];
-      let formCheck = document.forms[1];
-      let players = document.querySelector('input[name="players"]');
-      let CardZone = document.querySelector("#CardZone");
-      let CardTable = document.querySelector("#CardTable");
-      let checkwinner = document.querySelector("#checkwinner");
-      let Player = [];
-      let Cards = [];
-      let CardShowup = [];
-      //Functions
-      const disablebutton = element => {
-        this.disabled = true;
-      };
-
-      const addCards = (element1, element2) => {
-        element1.appendChild(element2);
-      };
-
-      const removeChildren = element => {
-        while (element.firstElementChild) {
-          element.firstElementChild.remove();
-        }
-      };
-
-      const getRandomInt = (min, max, ArrayOfCards) => {
-        let Card = Math.floor(Math.random() * (max - min)) + min;
-        while (ArrayOfCards.includes(Card)) {
-          Card = Math.floor(Math.random() * (max - min)) + min;
-        }
-        return Card;
-      };
-
-      const CalculateScore = (Player, CardTable) => {
-        let ScoreCards = [];
-        let ScoreCardsFamily = [];
-        let count = {};
-        let countF = {};
-        let doublepair = 0;
-        let doubletrio = 0;
-        let poker = 0;
-        let rank = [];
-        let pair = [];
-        let trio = [];
-        let boolLadder = false;
-        //Join player ScoreCards hand table ScoreCards
-        for (let i = 0; i < CardTable.length + 1; i++) {
-          if (i < 5) {
-            ScoreCards[i] = TranslatorCard.CardValue(CardTable[i]);
-            ScoreCardsFamily[i] = TranslatorCard.FamilyEnglish(CardTable[i]);
-          } else {
-            ScoreCards[i] = TranslatorCard.CardValue(Player.Card1);
-            ScoreCardsFamily[i] = TranslatorCard.FamilyEnglish(Player.Card1);
-            ScoreCards[i + 1] = TranslatorCard.CardValue(Player.Card2);
-            ScoreCardsFamily[i + 1] = TranslatorCard.FamilyEnglish(
-              Player.Card2
-            );
-          }
-        }
-        //Score para Dobles / Pareja de Dobles / Trio / Poker
-        ScoreCards.forEach(function(i) {
-          count[i] = (count[i] || 0) + 1;
-        });
-        let number = Object.keys(count);
-        let reps = Object.values(count);
-        let highcard = Math.max(number);
-        rank.push(1);
-        for (let i = 0; i < number.length; i++) {
-          if (reps[i] === 2) {
-            rank.push(2);
-            if (doublepair === 1) {
-              pair[1] = number[i];
-              rank.push(3);
-            }
-            if (doublepair === 2) {
-              pair[2] = number[i];
-            }
-            doublepair++;
-            pair[0] = number[i];
-          }
-          if (reps[i] === 3) {
-            rank.push(4);
-            if (doubletrio === 1) {
-              trio[1] = number[i];
-              rank.push(7); // If double trio then has FULL
-            }
-            doubletrio++;
-            trio[0] = number[i];
-          }
-          if (reps[i] === 4) {
-            rank.push(8);
-            poker = number[i];
-          }
-        }
-        //if rank has 2 & 4 -> rank becomes 7 (FULL)
-        let x = rank.find(x => x === 4);
-        let y = rank.find(x => x === 2);
-        if (y === 2 && x === 4) {
-          rank.push(7);
-        }
-        //Count Poker Ladder (ScoreCards.Number)
-        ScoreCards.sort(function(a, b) {
-          if (a > b) {
-            return 1;
-          }
-          if (a < b) {
-            return -1;
-          }
-          return 0;
-        });
-        ScoreCards.reverse();
-        //Check for doubles and discard
-        Array.prototype.unique = (function(a) {
-          return function() {
-            return this.filter(a);
-          };
-        })(function(a, b, c) {
-          return c.indexOf(a, b + 1) < 0;
-        });
-        let CardNumbers = ScoreCards.unique();
-        const reducer = (accumulator, currentValue, index, array) =>
-          accumulator - (currentValue + 1) + array[index - 1];
-        //Check only 5 ScoreCards for ladder
-        if (CardNumbers.length === 5) {
-          let Ladder = CardNumbers.reduce(reducer) - CardNumbers[0];
-          if (Ladder === 0) {
-            boolLadder = true;
-          }
-        }
-        if (CardNumbers.length === 6) {
-          let TopLadder = CardNumbers.slice(0, -1);
-          let LowLadder = CardNumbers.slice(1);
-
-          let TLadder = TopLadder.reduce(reducer) - TopLadder[0];
-          let LLadder = LowLadder.reduce(reducer) - LowLadder[0];
-          if (TLadder === 0 || LLadder === 0) {
-            boolLadder = true;
-          }
-        }
-        if (CardNumbers.length === 7) {
-          let TopLadder = CardNumbers.slice(0, -2);
-          let MidLadder = CardNumbers.slice(1, -1);
-          let LowLadder = CardNumbers.slice(2);
-
-          let TLadder = TopLadder.reduce(reducer) - TopLadder[0];
-          let LLadder = LowLadder.reduce(reducer) - LowLadder[0];
-          let MLadder = MidLadder.reduce(reducer) - MidLadder[0];
-          if (TLadder === 0 || LLadder === 0 || MLadder === 0) {
-            boolLadder = true;
-          }
-        }
-        if (boolLadder) {
-          rank.push(5);
-        }
-
-        //Count color
-        ScoreCardsFamily.forEach(function(i) {
-          countF[i] = (countF[i] || 0) + 1;
-        });
-        let numberF = Object.keys(countF);
-        let repsF = Object.values(countF);
-        if (Math.max(repsF) > 4) {
-          rank.push(6);
-        }
-        return rank;
-      };
-
-      let TranslatorCard = {
-        Family(element) {
-          let Familia = Math.trunc(element / 13);
-          switch (Familia) {
-            case 0:
-              Familia = "Rombos";
-              break;
-            case 1:
-              Familia = "Picas";
-              break;
-            case 2:
-              Familia = "Treboles";
-              break;
-            case 3:
-              Familia = "Corazones";
-              break;
-          }
-          return Familia;
-        },
-        FamilyEnglish(element) {
-          let Familia = Math.trunc(element / 13);
-          switch (Familia) {
-            case 0:
-              Familia = "D";
-              break;
-            case 1:
-              Familia = "S";
-              break;
-            case 2:
-              Familia = "C";
-              break;
-            case 3:
-              Familia = "H";
-              break;
-          }
-          return Familia;
-        },
-        CardNumber(element) {
-          let Familia = Math.trunc(element / 13);
-          let NumeroCarta = element - Familia * 13;
-          switch (NumeroCarta) {
-            case 0:
-              NumeroCarta = "A";
-              break;
-            case 1:
-              NumeroCarta = "2";
-              break;
-            case 2:
-              NumeroCarta = "3";
-              break;
-            case 3:
-              NumeroCarta = "4";
-              break;
-            case 4:
-              NumeroCarta = "5";
-              break;
-            case 5:
-              NumeroCarta = "6";
-              break;
-            case 6:
-              NumeroCarta = "7";
-              break;
-            case 7:
-              NumeroCarta = "8";
-              break;
-            case 8:
-              NumeroCarta = "9";
-              break;
-            case 9:
-              NumeroCarta = "10";
-              break;
-            case 10:
-              NumeroCarta = "J";
-              break;
-            case 11:
-              NumeroCarta = "Q";
-              break;
-            case 12:
-              NumeroCarta = "K";
-              break;
-          }
-          return NumeroCarta;
-        },
-        CardNumero(element) {
-          let Familia = Math.trunc(element / 13);
-          let NumeroCarta = element - Familia * 13;
-          switch (NumeroCarta) {
-            case 0:
-              NumeroCarta = "As";
-              break;
-            case 1:
-              NumeroCarta = "Dos";
-              break;
-            case 2:
-              NumeroCarta = "Tres";
-              break;
-            case 3:
-              NumeroCarta = "Cuatro";
-              break;
-            case 4:
-              NumeroCarta = "Cinco";
-              break;
-            case 5:
-              NumeroCarta = "Seis";
-              break;
-            case 6:
-              NumeroCarta = "Siete";
-              break;
-            case 7:
-              NumeroCarta = "Ocho";
-              break;
-            case 8:
-              NumeroCarta = "Nueve";
-              break;
-            case 9:
-              NumeroCarta = "Diez";
-              break;
-            case 10:
-              NumeroCarta = "J";
-              break;
-            case 11:
-              NumeroCarta = "Q";
-              break;
-            case 12:
-              NumeroCarta = "K";
-              break;
-          }
-          return NumeroCarta;
-        },
-        CardValue(element) {
-          let Familia = Math.trunc(element / 13);
-          let NumeroCarta = element - Familia * 13 + 1;
-          return NumeroCarta;
-        }
-      };
-      //Code
-      removeChildren(CardZone);
-      removeChildren(CardTable);
-
-      form.addEventListener("submit", event => {
-        event.preventDefault();
-        let gameplayers = Number(players.value);
-        removeChildren(CardZone);
-        removeChildren(CardTable);
-        removeChildren(Results);
-        for (let i = 0; i < gameplayers; i++) {
-          Player[i] = {
-            name: i + 1,
-            Card1: getRandomInt(0, 51, Cards),
-            Card2: getRandomInt(0, 51, Cards)
-          };
-          Cards[i * 2] = Player[i].Card1;
-          Cards[i * 2 + 1] = Player[i].Card2;
-          let CardHand = document.createElement("div");
-          CardHand.className = "CardHand";
-          CardHand.innerHTML = `
-          <p style="text-align: center;">Cards for player ${Player[i].name}</p>
-          <div class = "Card2">
-                <div class="Card">
-                    <img src="cartas/JPEG/${TranslatorCard.CardNumber(
-                      Player[i].Card1
-                    )}${TranslatorCard.FamilyEnglish(Player[i].Card1)}.jpg"
-                    height="150"
-                    width="100">
-                </div>
-                <div class="Card">
-                    <img src="cartas/JPEG/${TranslatorCard.CardNumber(
-                      Player[i].Card2
-                    )}${TranslatorCard.FamilyEnglish(Player[i].Card2)}.jpg"
-                    height="150"
-                    width="100">
-                </div>
-            </div>
-            <p>Card 1 -> ${TranslatorCard.CardNumero(
-              Player[i].Card1
-            )} de ${TranslatorCard.Family(Player[i].Card1)}</p>
-            <p>Card 2 -> ${TranslatorCard.CardNumero(
-              Player[i].Card2
-            )} de ${TranslatorCard.Family(Player[i].Card2)}</p>`;
-          addCards(CardZone, CardHand);
-        }
-        for (let i = 0; i < 5; i++) {
-          let CardShowdown = document.createElement("div");
-          CardShowdown.className = "CardShowdown";
-          CardShowdown.innerHTML = `
-            <div>
-                <img src="cartas/JPEG/Gray_back.jpg"
-                height="250"
-                width="150">
-            </div>`;
-          addCards(CardTable, CardShowdown);
-        }
-      });
-
-      formCheck.addEventListener("submit", event => {
-        event.preventDefault();
-        let gameplayers = Number(players.value);
-        removeChildren(CardTable);
-        removeChildren(Results);
-        for (let i = 0; i < 5; i++) {
-          CardShowup[i] = getRandomInt(0, 51, Cards);
-          Cards.push(CardShowup[i]);
-          let CardShow = document.createElement("div");
-          CardShow.className = "CardShowdown";
-          CardShow.innerHTML = `
-            <div>
-                    <img src="cartas/JPEG/${TranslatorCard.CardNumber(
-                      CardShowup[i]
-                    )}${TranslatorCard.FamilyEnglish(CardShowup[i])}.jpg"
-                    height="250"
-                    width="150">
-            </div>`;
-          addCards(CardTable, CardShow);
-        }
-        for (let i = 0; i < gameplayers; i++) {
-          let HandResult = document.createElement("div");
-          HandResult.className = "CardHand";
-          HandResult.innerHTML = `
-            <div>
-            <p style="text-align: center;">Result for player ${
-              Player[i].name
-            }</p>
-            <p style="text-align: center;">${CalculateScore(
-              Player[i],
-              CardShowup
-            )}</p>
-            </div>
-            `;
-          addCards(Results, HandResult);
-        }
-      });
-    </script>
+    <script type="module" src="Index.mjs"></script>
   </body>
 </html>
