--- a/Proyecto_2/Proyecto2.html
+++ b/Proyecto_2/Proyecto2.html
@@ -62,6 +62,8 @@
       <div id="CardTable"></div>
       <p style="text-align: center;">RESULTS</p>
       <div id="Results"></div>
+      <p style="text-align: center;">WINNER</p>
+      <div id="Winner"></div>
     </main>
     <script type="module" src="Index.mjs"></script>
   </body>
