Interaccion del jugador en cartas

--- a/Proyecto_2/Proyecto2.html
+++ b/Proyecto_2/Proyecto2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Style.css" />
     <style></style>
   </head>
+  </script>
   <body>
     <div id="top">
       <div>
@@ -25,7 +26,7 @@
           <button id="checkwinner">CHECK WINNER</button>
         </form>
       </div>
-      <div><h1>POKER GAME</h1></div>
+      <div id="title"><h1>POKER GAME</h1></div>
       <div>
         <div>
           <table id="legend">
@@ -59,7 +60,9 @@
       <p style="text-align: center;">PLAYERS CARDS</p>
       <div id="CardZone"></div>
       <p style="text-align: center;">TABLE CARDS</p>
-      <div id="CardTable"></div>
+      <div id="CardTable">
+        <div class="CardShowdown"></div>
+      </div>
       <p style="text-align: center;">RESULTS</p>
       <div id="Results"></div>
       <p style="text-align: center;">WINNER</p>
